form block positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -384,23 +384,27 @@
             </div>
         </section>
         <section class="form">
-            <h2 class="section-header">Остались вопросы?</h2>
-            <img src="img/corgi-side.png" alt="" class="corgi-form">
-            <p class="form-description">Оставьте заявку и мы свяжемся с вами
-                и ответим на все интересующие вопросы</p>
-            <form action="">
-                <fieldset>
-                    <label for="" class="input-label">Ваше имя</label>
-                    <input type="text" class="form-input" placeholder="Имя">
-                </fieldset>
-                <fieldset>
-                    <label for="" class="input-label">Ваш номер телефона</label>
-                    <input type="tel" class="form-input" placeholder="+375 (xx) xxx-xx-xx">
-                </fieldset>
-                <button class="submit">Отправить</button>
-                <p class="agreement">Нажимая кнопку вы даёте согласие на обработку
-                    персональных данных</p>
-            </form>
+            <div class="form-content-container">
+                <img src="img/corgi-side.png" alt="" class="corgi-form">
+                <div class="form-text-content-container">
+                    <h2 class="section-header">Остались вопросы?</h2>
+                    <p class="form-description">Оставьте заявку и мы свяжемся с вами
+                        и ответим на все интересующие вопросы</p>
+                    <form action="">
+                        <fieldset>
+                            <label for="" class="input-label">Ваше имя</label>
+                            <input type="text" class="form-input" placeholder="Имя">
+                        </fieldset>
+                        <fieldset>
+                            <label for="" class="input-label">Ваш номер телефона</label>
+                            <input type="tel" class="form-input" placeholder="+375 (xx) xxx-xx-xx">
+                        </fieldset>
+                        <button class="submit">Отправить</button>
+                        <p class="agreement">Нажимая кнопку вы даёте согласие на обработку
+                            персональных данных</p>
+                    </form>
+                </div>
+            </div>
         </section>
         <section class="contacts">
             <h2 class="section-header">Питомник «Happy paw»</h2>
