contacts block positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -406,26 +406,28 @@
                 </div>
             </div>
         </section>
-        <section class="contacts">
+        <section class="contacts-section">
             <h2 class="section-header">Питомник «Happy paw»</h2>
-            <img src="img/map.png" alt="" class="map">
-            <img src="img/corgi-lying.png" alt="" class="corgi-lying">
-            <dl class="contacts">
-                <dt class="contact-term">Адрес:</dt>
-                <dd class="contact-description">Деревня Тарасово, ул. Центральная 1/1</dd>
-                <dt class="contact-term">Электронная почта:</dt>
-                <dd class="contact-description">happypaw@gmail.com</dd>
-                <dt class="contact-term">Номер телефона:</dt>
-                <dd class="contact-description">+375 (44) 025-93-23</dd>
-                <dt class="contact-term">Мы в соц. сетях:</dt>
-                <dd class="contact-description">
-                    <ul class="social">
-                        <li class="social-item"><a href=""><img src="img/icons8-телеграм-250.png" alt="Telegram"></a></li>
-                        <li class="social-item"><a href=""><img src="img/icons8-whatsapp-250.png" alt="Instagram"></a></li>
-                        <li class="social-item"><a href=""><img src="img/icons8-instagram-250.png" alt="WhatsApp"></a></li>
-                    </ul>
-                </dd>
-            </dl>
+            <div class="contacts-content-container">
+                <img src="img/map.png" alt="" class="map">
+                <img src="img/corgi-lying.png" alt="" class="corgi-lying">
+                <dl class="contacts">
+                    <dt class="contact-term">Адрес:</dt>
+                    <dd class="contact-description">Деревня Тарасово, ул. Центральная 1/1</dd>
+                    <dt class="contact-term">Электронная почта:</dt>
+                    <dd class="contact-description">happypaw@gmail.com</dd>
+                    <dt class="contact-term">Номер телефона:</dt>
+                    <dd class="contact-description">+375 (44) 025-93-23</dd>
+                    <dt class="contact-term">Мы в соц. сетях:</dt>
+                    <dd class="contact-description">
+                        <ul class="social">
+                            <li class="social-item"><a href=""><img src="img/icons8-телеграм-250.png" alt="Telegram"></a></li>
+                            <li class="social-item"><a href=""><img src="img/icons8-whatsapp-250.png" alt="Instagram"></a></li>
+                            <li class="social-item"><a href=""><img src="img/icons8-instagram-250.png" alt="WhatsApp"></a></li>
+                        </ul>
+                    </dd>
+                </dl>
+            </div>
         </section>
     </main>
     <footer class="page-footer">
