--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Питомник "Happy Paw"</title>
 </head>
 <body>
     <header class="page-header">
@@ -431,22 +431,24 @@
         </section>
     </main>
     <footer class="page-footer">
-        <p class="company-name"><a href=""><span>Happy</span> Paw</a></p>
-        <a href="" class="call-button">Заказать звонок</a>
-        <p class="mail-title">happypaw@gmail.com</p>
-        <p class="phone-title">+375 (44) 025-93-23</p>
-        <nav class="footer-nav">
-            <ul>
-                <li class="footer-item"><a href="">О питомнике</a></li>
-                <li class="footer-item"><a href="">Уход</a></li>
-                <li class="footer-item"><a href="">Наши щенки</a></li>
-                <li class="footer-item"><a href="">Счастливые истории</a></li>
-                <li class="footer-item"><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <p class="private-policy"><a href="">Политика конфиденциальности</a></p>
-        <p class="politics"><a href="">Политика работы с персональными данными</a></p>
-        <p class="copyright">© 2023 «Happy раш» — Питомник корги</p>
+        <div class="footer-content-container">
+            <p class="company-name"><a href=""><span>Happy</span> Paw</a></p>
+            <a href="" class="call-button">Заказать звонок</a>
+            <p class="mail-title">happypaw@gmail.com</p>
+            <p class="phone-title">+375 (44) 025-93-23</p>
+            <nav class="footer-nav">
+                <ul>
+                    <li class="footer-item"><a href="">О питомнике</a></li>
+                    <li class="footer-item"><a href="">Уход</a></li>
+                    <li class="footer-item"><a href="">Наши щенки</a></li>
+                    <li class="footer-item"><a href="">Счастливые истории</a></li>
+                    <li class="footer-item"><a href="">Контакты</a></li>
+                </ul>
+            </nav>
+            <p class="private-policy"><a href="">Политика конфиденциальности</a></p>
+            <p class="politics"><a href="">Политика работы с персональными данными</a></p>
+            <p class="copyright">© 2023 «Happy раш» — Питомник корги</p>
+        </div>
     </footer>
 </body>
 </html>
